kubes/raws/owo-ingress.https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owo-ingress
spec:
  tls:
    - hosts:
      - owo.com
      secretName: owo-tls-secret
  rules:
  - host: owo.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: faas-optimizer-service
            port: 
              number: 30000
