kubes/raws/owo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owo-ingress
spec:
  rules:
  - host: owo.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: faas-optimizer-service
            port: 
              number: 30000
